--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "ga-label-issue",
+  "name": "create-branch-action",
   "version": "1.0.0",
   "description": "",
   "main": "index.js",
