--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -7,6 +7,10 @@ on:
         description: 'Name of the new branch'
         required: true
 
+  pull_request:
+    branches:
+      - main
+
 jobs:
   create_branch:
     runs-on: ubuntu-latest
@@ -16,16 +20,19 @@ jobs:
       uses: actions/checkout@v3
 
     - name: Determine Branch Name
-      id: determine-branch
+      id: determine_branch_name
       run: |
-        if [ "${{ github.event_name }}" == "pull_request" ] && [ "${{ github.base_ref }}" == "main" ]; then
-          echo "branch_name=${{ github.head_ref }}" >> $GITHUB_ENV
-        else
-          echo "branch_name=${{ github.event.inputs.branch_name }}" >> $GITHUB_ENV
-        fi
+        echo "branch_name=${{ github.event.inputs.branch_name }}" >> $GITHUB_ENV
+      if: ${{ github.event_name == 'workflow_dispatch' }}
+      
+    - name: Determine Branch Name for PR to main
+      id: determine_pr_branch_name
+      run: |
+        echo "branch_name=${{ github.head_ref }}" >> $GITHUB_ENV
+      if: ${{ github.event_name == 'pull_request' && github.base_ref == 'main' }}
 
     - name: Create Branch
       uses: daffahilmyf/create-branch-action@main
       with:
-        branch_name: ${{ github.event.inputs.branch_name }}
+        branch_name: ${{env.branch_name}}
         token: ${{ secrets.GH_TOKEN }}
